# funrobo_kinematics_final

./: .gitignore  .gitmodules  README.md  environment.yml  old_README.md  pyproject.toml
assignments/: mini-project-1.md  mini-project-2.md
brenna_tries_things/: trajectory.py
examples/: basic.py  hiwonder.py  hiwonder_aik_nik.py  hiwonder_rrmc.py  scara_fk.py  traj_gen.py  two_dof_fk.py  two_dof_nik.py  two_dof_rrmc.py
exercises/: scara_robot.py  scara_robot_dh.py
fun_kene_scripts/: block_pick.py  identify_and_pick_block  object_detection.py  test.py
funrobo_hiwonder/: README.md  environment.yml  pyproject.toml
funrobo_hiwonder/examples/: camera_capture.py  hiwonder_rrmc.py  joystick_control.py
funrobo_hiwonder/funrobo_hiwonder/: __init__.py
funrobo_hiwonder/funrobo_hiwonder/core/: gamepad_control.py  hiwonder.py  hiwonder_nogamepad.py
funrobo_kinematics/core/: arm_models.py  path_planner.py  trajectory_generator.py  utils.py  visualizer.py
libs/pyroboplan/src/pyroboplan/models/: hiwonder.py  two_dof.py
libs/pyroboplan/src/pyroboplan/models/hiwonder_description/: hiwonder.urdf
project/: FINAL_README.md  five_dof.py  mvp.py  mvp2.py  object_detection.py  path_planner_brain.py  path_planner_gui.py  path_planner_motion.py  path_planner_server.py  pp_local_server.py  server_funcs.py  test.py
scripts/: apriltag_gen.py  demo.py
tests/: test_fk.py  test_hiwonder.py  test_kinova.py  test_scara.py  test_two_dof.py
tests/data/: five_dof_fk_test_data.yaml  kinova_fk_test_data.yaml  scara_fk_test_data.yaml  two_dof_fk_test_data.yaml
(+1 files in other folders)
