[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funrobo_hiwonder"
version = "0.1.0"
description = "Python package for Hiwonder robot platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==1.24.2",
  "scipy",
  "matplotlib",
  "pygame",
  "pyyaml",
  "ipython",
  "pynput",
  "inputs==0.5",
  "pyserial==3.5",
  "opencv-python==4.11.0.86",
]

[project.optional-dependencies]
dev = [
  "pytest",
]


rpi = [
  "lgpio==0.2.2.0",
  "pigpio==1.78",
  "rpi-lgpio==0.6",
  "rpi-ws281x==5.0.0",
  "smbus2==0.4.2",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["funrobo_hiwonder*"]
